--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 3.6)
 include(CMakeToolsHelpers OPTIONAL)
 project(SunSpoT)
 
-set(CMAKE_C_STANDARD   14)
+set(CMAKE_C_STANDARD   11)
 set(CMAKE_CXX_STANDARD 14)
-#set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -Wall")
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fno-rtti -Wall")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES Android)
 	set(ANDROID TRUE)
@@ -115,8 +113,8 @@ set(SST_EXTENSION_HEADER ${PROJECT_BINARY_DIR}/include/sunspot/extension/${SST_E
 set(SST_EXTENSION_SOURCE ${PROJECT_BINARY_DIR}/src/sunspot/extension/${SST_EXTENSION_NAME}.cpp)
 add_custom_command(
 	OUTPUT ${SST_EXTENSION_HEADER} ${SST_EXTENSION_SOURCE}
-	COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/pyspot/script/generate-extension.py ${SST_EXTENSION_JSON} -h > ${SST_EXTENSION_HEADER}
-	COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/pyspot/script/generate-extension.py ${SST_EXTENSION_JSON} > ${SST_EXTENSION_SOURCE}
+	COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/pyspot/script/generate-extension.py ${SST_EXTENSION_JSON} -h ${SST_EXTENSION_HEADER}
+	COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/pyspot/script/generate-extension.py ${SST_EXTENSION_JSON} ${SST_EXTENSION_SOURCE}
 	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/pyspot/script
 	COMMENT "Generating ${SST_EXTENSION_HEADER}"
 	VERBATIM)
@@ -139,7 +137,7 @@ foreach(NAMESPACE ${NAMESPACES})
 			list(APPEND COMPONENT_HEADERS ${COMPONENT_HEADER})
 			add_custom_command(
 				OUTPUT ${COMPONENT_HEADER}
-				COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/pyspot/script/generate-component.py ${EXTENSION_NAME} ${COMPONENT} > ${COMPONENT_HEADER}
+				COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/pyspot/script/generate-component.py ${EXTENSION_NAME} ${COMPONENT} ${COMPONENT_HEADER}
 				WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/pyspot/script
 				COMMENT "Generating ${COMPONENT_HEADER}"
 				VERBATIM)
