--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,12 @@ add_subdirectory(${GLTFSPOT})
 set(GLTFSPOT_INCLUDE_DIR ${GLTFSPOT}/include)
 set(GLTFSPOT_LIBRARIES ${GLTFSPOT})
 
+# HitSpoT
+set(HITSPOT hitspot)
+add_subdirectory(${HITSPOT})
+set(HITSPOT_INCLUDE_DIR ${HITSPOT}/include)
+set(HITSPOT_LIBRARIES ${HITSPOT})
+
 # Version number
 set(SST_VERSION_MAJOR 0)
 set(SST_VERSION_MINOR 14)
@@ -226,6 +232,7 @@ target_include_directories(${SST_NAME}-lib PUBLIC
 	${PYSPOT_INCLUDE_DIR}
 	${DATASPOT_INCLUDE_DIR}
 	${GLTFSPOT_INCLUDE_DIR}
+	${HITSPOT_INCLUDE_DIR}
 	${DEPENDENCY_INCLUDE_DIRECTORIES})
 
 set(DEPENDENCY_LIBRARIES
@@ -236,7 +243,8 @@ set(DEPENDENCY_LIBRARIES
 	${PYTHON_LIBRARIES}
 	${PYSPOT_LIBRARIES}
 	${DATASPOT_LIBRARIES}
-	${GLTFSPOT_LIBRARIES})
+	${GLTFSPOT_LIBRARIES}
+	${HITSPOT_LIBRARIES})
 
 if(WIN32)
 	set_target_properties(${SST_NAME}-lib PROPERTIES LINK_FLAGS "/NODEFAULTLIB:libcmt")
