--- a/android/local.properties
+++ b/android/local.properties
@@ -10,3 +10,5 @@
 #Thu Jul 27 17:42:02 BST 2017
 ndk.dir=D\:\\Users\\7oni\\AppData\\Local\\Android\\sdk\\ndk-bundle
 sdk.dir=D\:\\Users\\7oni\\AppData\\Local\\Android\\sdk
+#ndk.dir=/opt/android-ndk
+#sdk.dir=/usr/lib/android-sdk
