--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,8 +5,11 @@
   <application
       android:allowBackup="false"
       android:fullBackupContent="false"
+      android:supportsRtl="true"
       android:icon="@mipmap/ic_launcher"
-      android:label="@string/sunspot_activity">
+      android:label="@string/app_name"
+      android:name="me.fahien.sunspot.SunspotApplication">
+      <!-- OLD Sunspot Activity 
     <activity android:name="SunSpotActivity"
               android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
               android:launchMode="singleTask"
@@ -16,5 +19,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    -->
+
+    <!-- Our activity is the built-in NativeActivity framework class.
+     This will take care of integrating with our NDK code. -->
+    <activity android:name="me.fahien.sunspot.SunspotNativeActivity"
+              android:label="@string/sunspot_activity"
+              android:configChanges="orientation|keyboardHidden">
+      <!-- Tell NativeActivity the name of our .so -->
+      <meta-data android:name="android.app.lib_name"
+                 android:value="sunspot" />
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+
   </application>
 </manifest>
